--- a/css/home.scss
+++ b/css/home.scss
@@ -344,6 +344,39 @@ body {
 
     .project {
       margin: 10px 0;
+      @include perspective(1000);
+
+      &:hover .flipper,
+      &.hover .flipper {
+        @include transform(rotateY(180deg));
+	    }
+
+      .front,
+      .back {
+        background: #ffffff;
+      	width: 100%;
+      	height: 100%;
+
+      	-webkit-backface-visibility: hidden;
+      	-moz-backface-visibility: hidden;
+        -o-backface-visibility: hidden;
+      	backface-visibility: hidden;
+
+      	position: absolute;
+      	top: 0;
+      	left: 0;
+      }
+
+      .back {
+        @include transform(rotateY(180deg));
+
+      	background: #f8f8f8;
+      }
+
+      .flipper {
+        @include transition(0.6s, 0, preserve-3d);
+      	position: relative;
+      }
 
       img {
         width: 100%;
