--- a/css/home.scss
+++ b/css/home.scss
@@ -431,10 +431,10 @@ body {
       }
 
       &.jspres .back {
-        background: #3498db /* 3498db */;
+        background: #f5f1ff /* c3b5c9 */;
       }
       &.easy-math .back {
-        background: #3498db;
+        background: #62ab46;
       }
       &.what-to-do .back {
         background: #f1c40f; /* 2ecc71 e67e22 3498db*/
