--- a/css/home.scss
+++ b/css/home.scss
@@ -3,11 +3,23 @@
 
 @import 'partial';
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background: #5DBCD2;
-
-  min-height: 2000px;
+  background: #1F528B;
   padding-top: 50px;
+}
+
+iframe {
+  overflow: hidden;
 }
 
 .navbar.navbar-fixed-top {
@@ -34,23 +46,26 @@ body {
   padding-right: 0;
 }
 
+.parallax-window {
+  background: url('/images/parallax/vim-rotated-low.jpg') top center;
+  min-height: 400px;
+  background-size: cover;
+}
+
 .parallax-container {
-  width: 100%;
-  height: 500px;
+  min-height: 500px;
   background: transparent;
 }
 
-
 .parallax-mirror {
-  width: 100%;
+  /* width: 100%; */
   left: 0;
   margin: 0;
   padding: 0;
 
-  /* z-index: 0 !important; */
   img.parallax-slider {
-    background: blue;
-    width: 100% !important;
+    /* width: 100% !important; */
+    height: auto;
     left: 0 !important;
   }
 }
@@ -312,8 +327,10 @@ body {
 
 
 .section {
+  width: 100%;
   min-height: 400px;
   padding: 20px 0 30px 0;
+  margin: 0;
 
   color: #eeeeee;
   /* opacity: 0; */
@@ -432,12 +449,14 @@ body {
 
       &.jspres .back {
         background: #f5f1ff /* c3b5c9 */;
+        color: #4D4052;
       }
       &.easy-math .back {
         background: #62ab46;
       }
       &.what-to-do .back {
         background: #f1c40f; /* 2ecc71 e67e22 3498db*/
+        color: #1C4F71;
       }
     }
   }
